fix(identity): resolve 403 error and fix JPA schema mismatch for isRealtor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 # Critical for GeoLocation features
 # spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisPG9Dialect
 
+# spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 
 # ===============================
