feat: backend core complete with validation and security; swagger fix pending

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,13 @@ spring.jpa.hibernate.ddl-auto=update
 # ===============================
 spring.application.name=crm-backend
 server.port=8080
+
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+springdoc.swagger-ui.url=/v3/api-docs
+springdoc.api-docs.path=/v3/api-docs
+
+# springdoc.api-docs.path=/v3/api-docs
+# springdoc.swagger-ui.path=/swagger-ui.html
+
+# This tells Swagger to try and load the definition even if there are security headers
+springdoc.swagger-ui.display-query-params=true
