feat: add DevTools for automation and unify SecurityConfig with WebMvcConfigurer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ springdoc.api-docs.path=/v3/api-docs
 
 # This tells Swagger to try and load the definition even if there are security headers
 springdoc.swagger-ui.display-query-params=true
+
+spring.devtools.restart.exclude=static/**,public/**
